--- a/www/templates/activity.html
+++ b/www/templates/activity.html
@@ -1,55 +1,30 @@
 <ion-view view-title="Activity">
     <ion-content ng-class="{expanded:isExpanded}" class="animate-fade-slide-in">
-        <div class="item card-item">
-            <div ui-sref="app.gallery" class="card stable-bg ink ink-dark">
-                <div class="item item-avatar item-text-wrap">
-                    <span class="avatar" style="background-image: url('img/jon-snow.jpg');"></span>
-                    <strong>Jon Snow</strong> knows nothing.
-                    <div class="card-footer text-right">
-                        <i class="icon ion-chatbubbles positive"></i> 6
-                        <i class="icon ion-heart assertive"></i> 23
-                        <div class="pull-left">
-                            <i class="icon ion-clock"></i> just now
-                        </div>
-                    </div>
-                </div>
+        <div class="list card stable-bg ink ink-dark">
+
+          <div class="item item-avatar item-icon-right">
+            <img src="img/sansa.jpg">
+            <h2>Pretty Hate Machine</h2>
+            <p>Nine Inch Nails</p>
+            <i class="icon ion-email" ui-sref="app.message"></i>
+          </div>
+
+          <div class="item item-image">
+            <img src="img/sansa-snowcastle3.jpg">
+          </div>
+
+          <a class="item item-icon-right assertive" href="#">
+            <progress value="{{play}}" max="100"></progress>
+            <i class="icon ion-checkmark-round"></i>
+          </a>
+
+          <div class="list">
+            <div class="item range range-positive">
+              <i class="icon ion-edit"></i>
+              <input type="range" name="volume" min="0" max="100" value="1" ng-model="play">
+              <i class="icon ion-checkmark-round"></i>
             </div>
+          </div>
         </div>
-        <div class="item card-item">
-            <div ui-sref="app.gallery" class="card stable-bg ink ink-dark">
-                <div class="item item-avatar item-text-wrap">
-                    <span class="avatar" style="background-image: url('img/tyrion.jpg');"></span>
-                    <strong>Tyrion Lannister</strong> says "Perhaps that is the secret. It is not what we do, so much as why we do it."
-                    <div class="card-footer text-right">
-                        <i class="icon ion-chatbubble positive"></i> 2
-                        <i class="icon ion-heart assertive"></i> 4
-                        <div class="pull-left">
-                            <i class="icon ion-clock"></i> 12 mins ago
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="item card-item">
-            <div ui-sref="app.gallery" class="card stable-bg ink ink-dark">
-                <div class="item item-avatar item-text-wrap">
-                    <span class="avatar" style="background-image: url('img/sansa.jpg');"></span>
-                    <strong>Sansa Stark</strong> added a gallery <strong>Pretending to be Anna from Frozen</strong> ...
-                    <a class="image"><img src="img/sansa-snowcastle.png">
-                    </a>
-                    <a class="image"><img src="img/sansa-snowcastle2.jpg">
-                    </a>
-                    <a class="image"><img src="img/sansa-snowcastle3.jpg">
-                    </a>
-                    <div class="card-footer text-right">
-                        <i class="icon ion-chatbubble positive"></i> 2
-                        <i class="icon ion-heart assertive"></i> 4
-                        <div class="pull-left">
-                            <i class="icon ion-clock"></i> 3 hrs ago
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </ion-content>
+  </ion-content>
 </ion-view>
