--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -6,18 +6,21 @@
                 <h1>Thronester</h1>
             </div>
         </div>
-        <div class="list">
-            <ion-md-input placeholder="Username" highlight-color="balanced" type="text"></ion-md-input>
-            <ion-md-input placeholder="Password" highlight-color="energized" type="password"></ion-md-input>
-        </div>
-        <div class="padding">
-          <button ui-sref="app.profile" class="button button-full button-energized-100  ink">Login</button>
-          <button ui-sref="app.register" class="button button-full button-royal-100 ink">Register</button>
-        </div>
-        <div class="  button-bar social-login">
-            <button class="button button-small button-border icon-left ion-social-google button-assertive-900">Google+</button>
-            <button class="button button-small button-border icon-left ion-social-twitter button-calm-900">Twitter</button>
-            <button class="button button-small button-border icon-left ion-social-facebook button-positive-900">Facebook</button>
-        </div>
+        <form name="loginForm" novalidate>
+          <div class="list">
+              <ion-md-input placeholder="Username" name="username" highlight-color="balanced" type="text" ng-model="user.username" required></ion-md-input>
+              <ion-md-input placeholder="Password" name="password" highlight-color="energized" type="password" ng-model="user.password" required></ion-md-input>
+          </div>
+
+          <div class="padding">
+            <button class="button button-full button-energized-100  ink" ng-disabled="loginForm.$invalid" ui-sref="app.profile">Login</button>
+            <button ui-sref="app.register" class="button button-full button-royal-100 ink">Register</button>
+          </div>
+          <div class="  button-bar social-login">
+              <button class="button button-small button-border icon-left ion-social-google button-assertive-900">Google+</button>
+              <button class="button button-small button-border icon-left ion-social-twitter button-calm-900">Twitter</button>
+              <button class="button button-small button-border icon-left ion-social-facebook button-positive-900">Facebook</button>
+          </div>
+        </form>
     </ion-content>
 </ion-view>
