--- a/mobile/www/templates/profilepicture.html
+++ b/mobile/www/templates/profilepicture.html
@@ -6,10 +6,10 @@
             </div>
         </div>
         <div class="list">
-            <ion-md-input placeholder="Profile Picture" highlight-color="balanced" type="file" style="width:100%;"></ion-md-input>
+            <ion-md-input placeholder="Profile Picture" highlight-color="balanced" type="file" style="width:100%;" ng-file='user.propic'></ion-md-input>
         </div>
         <div class="padding">
-          <button ui-sref="app.register" class="button button-full button-energized-100 ink">Register</button>
+          <button ng-click="uploadProfile(user)" class="button button-full button-energized-100 ink">Register</button>
         </div>
     </ion-content>
 </ion-view>
