--- a/mobile/www/templates/register.html
+++ b/mobile/www/templates/register.html
@@ -19,8 +19,8 @@
                 <center> <h1 class="title black">I am</h1> </center>
             </div>
             <ion-list>
-              <ion-radio ng-model="utype" ng-value="'Artisan'">Artisan</ion-radio>
-              <ion-radio ng-model="utype" ng-value="'Designer'">Designer</ion-radio>
+              <ion-radio ng-model="newUser.utype" ng-value="'Artisan'">Artisan</ion-radio>
+              <ion-radio ng-model="newUser.utype" ng-value="'Designer'">Designer</ion-radio>
             </ion-list>
         </div>
         <div class="padding">
