--- a/mobile/www/templates/message.html
+++ b/mobile/www/templates/message.html
@@ -15,7 +15,7 @@
       </div>
       <div class="bar item-input-inset">
         <label class="item-textarea-wrapper" style="width:100%;">
-          <textarea type="text" placeholder="   Message" ng-model="message.message" ></textarea>
+          <textarea type="text" placeholder="   Message" ng-model="message.message" autofocus></textarea>
         </label>
         <button class="button button-clear" ng-click="sent(message)">
           <i class="icon ion-paper-airplane placeholder-icon"></i>
