--- a/mobile/www/templates/category.html
+++ b/mobile/www/templates/category.html
@@ -1,40 +1,27 @@
-<ion-view view-title="Catrgories">
-    <ion-content ng-class="{expanded:isExpanded}">
+<ion-view view-title="Categories">
+    <ion-content ng-class="{expanded:isExpanded}" style="background-color:#ccc;">
         <div class="content has-header">
             <div ng-click="storeCategory('c')" class="card animate-fade-slide-in-right" style="height: 200px; background: url(img/clothes.jpg) center; background-size: cover;">
               <div class="item item-text-wrap">
-                  <!-- <img src="img/jon-snow.jpg"> -->
-                  <h1 class="energized-100"><b>Clothes</b></h1>
-                  <!-- <p>Da illest illegitimate</p> -->
+                  <h1  style="text-shadow: 1px 1px 3px #000;" class="assertive"><b>Clothes</b></h1>
+
               </div>
             </div>
             <div ng-click="storeCategory('f')" class="card animate-fade-slide-in-right" style=" height: 200px; background: url(img/footware.jpg) center; background-size: cover;">
               <div class="item item-text-wrap">
-                  <!-- <img src="img/jon-snow.jpg"> -->
-                  <h1 class="energized-100"><b>Footware</b></h1>
-                  <!-- <p>Da illest illegitimate</p> -->
+                <h1  style="text-shadow: 1px 1px 3px #000;" class="assertive">  <b>Footware</b></h1>
+
               </div>
             </div>
             <div ng-click="storeCategory('ab')" class="card animate-fade-slide-in-right" style=" height: 200px; background: url(img/accessoriesandbags.jpg) center; background-size: cover;">
               <div class="item item-text-wrap">
-                  <!-- <img src="img/jon-snow.jpg"> -->
-                  <h1 class="energized-100"><b>Accessories and Bags</b></h1>
-                  <!-- <p>Da illest illegitimate</p> -->
-              </div>
+                <h1  style="text-shadow: 1px 1px 3px #000;" class="assertive">  <b>Accessories and Bags</b></h1>
+                  </div>
             </div>
-            <!-- <div ui-sref="app.list" class="card animate-fade-slide-in-right" style=" height: 200px; background: url(img/furniture.jpg) center; background-size: cover;">
-              <div class="item item-text-wrap">
-                  <!-- <img src="img/jon-snow.jpg"> -->
-                  <!-- <h1 class="energized-100"><b>Home and  Office Furniture</b></h1> -->
-                  <!-- <p>Da illest illegitimate</p> -->
-              <!-- </div>
-            </div> --> 
             <div ng-click="storeCategory('o')" class="card animate-fade-slide-in-right" style=" height: 200px; background: url(img/occasional.jpg) center; background-size: cover;">
               <div class="item item-text-wrap">
-                  <!-- <img src="img/jon-snow.jpg"> -->
-                  <h1 class="energized-100"><b>Occassional</b></h1>
-                  <!-- <p>Da illest illegitimate</p> -->
-              </div>
+            <h1  style="text-shadow: 1px 1px 3px #000;" class="assertive">    <b>Occassional</b></h1>
+                  </div>
             </div>
         </div>
     </ion-content>
