--- a/mobile/www/templates/upload.html
+++ b/mobile/www/templates/upload.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Upload">
-    <ion-content ng-class="{expanded:isExpanded}" >
+    <ion-content ng-class="{expanded:isExpanded}"  >
       <div class="" ng-show="message">
         {{message}}
         {{error.item_name[0]}} <br>
@@ -49,7 +49,7 @@
         </label>
       </div>
       <div class="list">
-        <button type="submit"  class="button button-full button-royal-100 ink">Upload</button>
+        <button type="submit"  class="button button-full button-assertive ink">Upload</button>
       </div>
     </form>
 
