--- a/mobile/www/templates/login.html
+++ b/mobile/www/templates/login.html
@@ -6,17 +6,17 @@
                 <h1>Likha</h1>
             </div>
         </div>
-          <div class="list">
+          <div class="alert alert-danger list" style="margin-left:3%; margin-right:4%;" ng-show="error">
             {{error}}
           </div>
-          <div class="list">
+          <div class="list" style="margin-right:8%;">
               <ion-md-input placeholder="Username" highlight-color="balanced" type="text" ng-model="loginForm.username" required></ion-md-input>
               <ion-md-input placeholder="Password" highlight-color="energized" type="password" ng-model="loginForm.password" required></ion-md-input>
           </div>
 
           <div class="padding">
-            <button class="button button-full button-energized-100 ink" ng-click="Userin(loginForm)">Login</button>
-            <button ui-sref="app.register" class="button button-full button-royal-100 ink">Register</button>
+            <button class="button button-full button-assertive ink" ng-click="Userin(loginForm)">Login</button>
+            <button ui-sref="app.register" class="button button-full button-positive ink">Register</button>
           </div>
           <!-- <div class="  button-bar social-login">
               <button class="button button-small button-border icon-left ion-social-google button-assertive-900">Google+</button>
