--- a/mobile/www/templates/message.html
+++ b/mobile/www/templates/message.html
@@ -1,21 +1,23 @@
 <ion-view view-title="Message">
     <ion-content ng-class="{expanded:isExpanded}" >
       <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
-      <div class="list" ng-repeat="letter in message track by letter.messageid">
+      <div class="list" ng-repeat="letter in message track by letter.messageid" style="width:auto;">
         <div class="list">
 
           <a class="item item-avatar" href="#">
             <img src="http://192.168.1.15:81/mobile/likha/public/uploads/{{letter.user.profilepicture}}">
             <h2>{{letter.user.username}}</h2>
             <p>{{letter.created_at}}</p> <br>
-            <p>{{letter.message}}</p>
+            <div style="white-space: nowrap;">
+              {{letter.message}}
+            </div>
           </a>
           <hr>
         </div>
       </div>
       <div class="bar item-input-inset">
         <label class="item-textarea-wrapper" style="width:100%;">
-          <textarea type="text" placeholder="   Message" ng-model="message.message" autofocus></textarea>
+          <textarea type="text" cols="50" placeholder="Message" ng-model="message.message" autofocus style="margin-left:2%;"></textarea>
         </label>
         <button class="button button-clear" ng-click="sent(message)">
           <i class="icon ion-paper-airplane placeholder-icon"></i>
