--- a/mobile/www/templates/profilepicture.html
+++ b/mobile/www/templates/profilepicture.html
@@ -1,5 +1,5 @@
 <ion-view view-title="register" align-title="left">
-    <ion-content style="background: url(img/bd.png) center; background-size: cover;">
+    <ion-content style="background-color:#19376e; background-size: cover;">
         <div class="hero no-header flat">
             <div class="content">
                 <div class="app-icon"></div>
@@ -15,8 +15,8 @@
             <ion-md-input placeholder="Profile Picture" ng-file-select="onFileSelect($files)" type="file"></ion-md-input>
         </div>
         <div class="padding">
-          <button class="button button-full button-energized-100 ink" type="submit" ng-click="add()">Upload</button>
-          <button  ui-sref="app.login"class="button button-full button-energized-100 ink">Skip</button>
+          <button class="button button-full button-assertive ink" type="submit" ng-click="add()">Upload</button>
+          <button  ui-sref="app.login"class="button button-full button-positive ink">Skip</button>
         </div>
       <!-- </form> -->
 
