--- a/mobile/www/templates/profile.html
+++ b/mobile/www/templates/profile.html
@@ -16,21 +16,21 @@
             <a ui-sref="app.category" class="tab-item">
                 <i class="icon ion-images"></i> Category
             </a>
-            <!-- <a ui-sref="app.setting" class="tab-item">
-                <i class="icon ion-images"></i> Settings
-            </a> -->
+            <a ui-sref="app.admin" class="tab-item">
+                <i class="icon ion-ios-gear"></i> Likha
+            </a>
         </div>
-        <h4 class="content padding double-padding-x">Pendings</h4>
+        <h4 class="content padding double-padding-x">Pending</h4>
       <div class="list" ng-repeat="pendbid in bid track by pendbid.bidid" ng-show="bid">
             <a class="item item-avatar item-icon-right">
                 <img src="http://localhost:81/mobile/likha/public/uploads/{{pendbid.item.item_picture}}">
                 <h2>{{pendbid.item.item_name}}</h2>
                 <p>{{pendbid.amount}}</p>
-                <i class="icon ion-thumbsup muted"></i>
             </a>
         </div>
-        <div class="list" ng-repeat="penditem in item track by penditem.itemid" ng-show="item">
-              <a class="item item-avatar item-icon-right" ng-click="selection(penditem.itemid, penditem.bid)">
+        <div class="item item-icon-right" ng-repeat="penditem in item track by penditem.itemid" ng-show="item">
+          <i ng-show="penditem.item_status=='o'" ng-click="editing(penditem.itemid)" class="icon ion-ios-gear"></i>
+              <a class="item item-avatar" ng-click="selection(penditem.itemid, penditem.bid)">
                   <img src="http://localhost:81/mobile/likha/public/uploads/{{penditem.item_picture}}">
                   <h2>{{penditem.item_name}}</h2>
                   <p>Due Date: {{penditem.date_to_finish}}</p>
